# txtdown

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  MANIFEST.in  README.md  RELEASING.md  pyproject.toml
examples/: augustine-civ-dei-1.2.txtd  cicero-de-amicitia.txtd  sulpicia-tei.txtd  sulpicia.txtd
src/txtdown/: __init__.py  models.py  parser.py  tags.py  writer.py
tests/: test_parser.py  test_tags.py  test_validate_quotes.py  test_writer.py
tests/fixtures/: dulcitius-scene1.txtd  sulpicia.txtd
