[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "txtdown"
version = "0.3.1"
description = "Minimal markup for Latin text collections"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Patrick J. Burns"}
]
keywords = ["latin", "markup", "text", "philology", "digital-humanities", "nlp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Markup",
]
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/diyclassics/txtdown"
Repository = "https://github.com/diyclassics/txtdown"
Changelog = "https://github.com/diyclassics/txtdown/blob/main/CHANGELOG.md"
Issues = "https://github.com/diyclassics/txtdown/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
